syntax = "proto3";

package api.auth.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "proto/user_schemas.proto";

option go_package = "github.com/Jecosine/alioth-kratos/api/auth/v1;v1";

service Auth {
	rpc Register (RegisterRequest) returns (RegisterReply) {
		option (google.api.http) = {
			post: "auth/register",
			body: "*"
		};
	}
	rpc Login (LoginRequest) returns (LoginReply) {
		option (google.api.http) = {
			post: "auth/login",
			body: "*"
		};
	}
	rpc CurrentUser (google.protobuf.Empty) returns (CurrentUserReply) {
		option (google.api.http) = {
			get: "auth/current"
		};
	}
	rpc ListAuth (ListAuthRequest) returns (ListAuthReply);
}

message RegisterRequest {
	UserProto payload = 1;
}
message RegisterReply {}

message LoginRequest {}
message LoginReply {}

message DeleteAuthRequest {}
message DeleteAuthReply {}

message CurrentUserRequest {}
message CurrentUserReply {
	UserProto user = 1;
	int64 expired = 2;
}

message ListAuthRequest {}
message ListAuthReply {}